--- a/cellposeSAM_v5_png.ipynb
+++ b/cellposeSAM_v5_png.ipynb
@@ -43,7 +43,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install git+https://github.com/MouseLand/cellpose.git"
+        "!pip install git+https://github.com/MouseLand/cellpose.git\n",
+        "#change"
       ],
       "metadata": {
         "colab": {
